--- a/StyleAndValidation/App.xaml
+++ b/StyleAndValidation/App.xaml
@@ -1,10 +1,23 @@
-﻿<?xml version = "1.0" encoding = "UTF-8" ?>
-<Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:StyleAndValidation"
-             x:Class="StyleAndValidation.App">
+﻿<?xml version="1.0" encoding="UTF-8" ?>
+<Application
+        x:Class="StyleAndValidation.App"
+        xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+        xmlns:local="clr-namespace:StyleAndValidation">
     <Application.Resources>
         <ResourceDictionary>
+            <Style x:Key="error" TargetType="Label">
+                <Setter Property="TextColor" Value="Red" />
+                <Setter Property="FontSize" Value="15" />
+                <Setter Property="HorizontalOptions" Value="Center" />
+
+            </Style>
+            <Style x:Key="register" TargetType="Button">
+                <Setter Property="TextColor" Value="Blue" />
+                <Setter Property="FontSize" Value="20" />
+                <Setter Property="HorizontalOptions" Value="Center" />
+
+            </Style>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
