--- a/StyleAndValidation/Views/RegisterPage.xaml
+++ b/StyleAndValidation/Views/RegisterPage.xaml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-    x:Class="StyleAndValidation.Views.RegisterPage"
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:viewmodels="clr-namespace:StyleAndValidation.ViewModels"
-    Title="הרשמה"
-    x:DataType="viewmodels:RegisterPageViewModel">
+        x:Class="StyleAndValidation.Views.RegisterPage"
+        xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+        xmlns:viewmodels="clr-namespace:StyleAndValidation.ViewModels"
+        Title="הרשמה"
+        x:DataType="viewmodels:RegisterPageViewModel">
 
     <!--  Styles  -->
     <ContentPage.Resources>
@@ -32,50 +32,51 @@
 
         <!--  Title  -->
         <Frame
-            BackgroundColor="Teal"
-            HeightRequest="70"
-            HorizontalOptions="FillAndExpand">
+                BackgroundColor="Teal"
+                HeightRequest="70"
+                HorizontalOptions="FillAndExpand">
             <Label
-                FontSize="20"
-                HorizontalOptions="Center"
-                Text="ברוכים הבאים"
-                TextColor="White"
-                VerticalOptions="Center" />
+                    FontSize="20"
+                    HorizontalOptions="Center"
+                    Text="ברוכים הבאים"
+                    TextColor="White"
+                    VerticalOptions="Center" />
         </Frame>
 
         <!--  User Name  -->
         <Grid RowDefinitions="auto,auto,*">
             <Label Style="{StaticResource lblStyle}" Text="Username" />
             <Entry
-                Grid.Row="1"
-                Style="{StaticResource entStyle}"
-                Text="{Binding Username}" />
+                    Grid.Row="1"
+                    Style="{StaticResource entStyle}"
+                    Text="{Binding Username}" />
             <Label
-                Grid.Row="2"
-                IsVisible="{Binding ShowUserNameError}"
-                Text="{Binding UserNameErrorMEssage}" />
+                    Grid.Row="2"
+                    IsVisible="{Binding ShowUserNameError}"
+                    Style="{StaticResource error}"
+                    Text="{Binding UserNameErrorMEssage}" />
         </Grid>
         <!--  Password  -->
         <Label Style="{StaticResource lblStyle}" Text="Password" />
         <Entry
-            IsPassword="True"
-            Style="{StaticResource entStyle}"
-            Text="{Binding Password}" />
+                IsPassword="True"
+                Style="{StaticResource entStyle}"
+                Text="{Binding Password}" />
         <!--  FullName  -->
         <Label Style="{StaticResource lblStyle}" Text="Full Name" />
         <Entry Style="{StaticResource entStyle}" Text="{Binding FullName}" />
         <!--  Email  -->
         <Label Style="{StaticResource lblStyle}" Text="Email" />
         <Entry
-            Keyboard="Email"
-            Style="{StaticResource entStyle}"
-            Text="{Binding Email}" />
+                Keyboard="Email"
+                Style="{StaticResource entStyle}"
+                Text="{Binding Email}" />
         <!--  כפתור הרשמה  -->
         <Button
-            Command="{Binding RegisterCommand}"
-            HorizontalOptions="FillAndExpand"
-            Style="{StaticResource btnStyle}"
-            Text="Register" />
+                Command="{Binding RegisterCommand}"
+                HorizontalOptions="FillAndExpand"
+                Style="{StaticResource btnStyle}"
+                Text="Register" />
     </VerticalStackLayout>
 
 </ContentPage>
